csbind/src/joltc.rs

extern "C" {
    pub fn JPH_MeshShapeSettings_GetPerTriangleUserData(
        settings: *const JPH_MeshShapeSettings,
    ) -> bool;
}
extern "C" {
    pub fn JPH_MeshShapeSettings_SetPerTriangleUserData(
        settings: *mut JPH_MeshShapeSettings,
        perTriangleUserData: bool,
    );
}
extern "C" {
    pub fn JPH_MeshShapeSettings_Sanitize(settings: *mut JPH_MeshShapeSettings);
}
extern "C" {
    pub fn JPH_MeshShapeSettings_CreateShape(
        settings: *const JPH_MeshShapeSettings,
    ) -> *mut JPH_MeshShape;
}
extern "C" {
    pub fn JPH_MeshShape_GetTriangleUserData(
        shape: *const JPH_MeshShape,
        id: JPH_SubShapeID,
    ) -> u32;
}
extern "C" {
    pub fn JPH_HeightFieldShapeSettings_Create(
        samples: *const f32,
        offset: *const JPH_Vec3,
        scale: *const JPH_Vec3,
        sampleCount: u32,
    ) -> *mut JPH_HeightFieldShapeSettings;
}
extern "C" {
    pub fn JPH_HeightFieldShapeSettings_CreateShape(
        settings: *mut JPH_HeightFieldShapeSettings,
    ) -> *mut JPH_HeightFieldShape;
}
extern "C" {
    pub fn JPH_HeightFieldShapeSettings_DetermineMinAndMaxSample(
        settings: *const JPH_HeightFieldShapeSettings,
        pOutMinValue: *mut f32,
        pOutMaxValue: *mut f32,
        pOutQuantizationScale: *mut f32,
    );
}
extern "C" {
    pub fn JPH_HeightFieldShapeSettings_CalculateBitsPerSampleForError(
        settings: *const JPH_HeightFieldShapeSettings,
        maxError: f32,
    ) -> u32;
}
extern "C" {
    pub fn JPH_HeightFieldShape_GetSampleCount(shape: *const JPH_HeightFieldShape) -> u32;
}
extern "C" {
    pub fn JPH_HeightFieldShape_GetBlockSize(shape: *const JPH_HeightFieldShape) -> u32;
}
extern "C" {
    pub fn JPH_HeightFieldShape_GetMaterial(
        shape: *const JPH_HeightFieldShape,
        x: u32,
        y: u32,
    ) -> *const JPH_PhysicsMaterial;
}
extern "C" {
    pub fn JPH_HeightFieldShape_GetPosition(
        shape: *const JPH_HeightFieldShape,
        x: u32,
        y: u32,
        result: *mut JPH_Vec3,
    );
}
extern "C" {
    pub fn JPH_HeightFieldShape_IsNoCollision(
        shape: *const JPH_HeightFieldShape,
        x: u32,
        y: u32,
    ) -> bool;
}
extern "C" {
    pub fn JPH_HeightFieldShape_ProjectOntoSurface(
        shape: *const JPH_HeightFieldShape,
        localPosition: *const JPH_Vec3,
        outSurfacePosition: *mut JPH_Vec3,
        outSubShapeID: *mut JPH_SubShapeID,
    ) -> bool;
}
extern "C" {
    pub fn JPH_HeightFieldShape_GetMinHeightValue(shape: *const JPH_HeightFieldShape) -> f32;
}
extern "C" {
    pub fn JPH_HeightFieldShape_GetMaxHeightValue(shape: *const JPH_HeightFieldShape) -> f32;
}
extern "C" {
    pub fn JPH_TaperedCapsuleShapeSettings_Create(
        halfHeightOfTaperedCylinder: f32,
        topRadius: f32,
        bottomRadius: f32,
    ) -> *mut JPH_TaperedCapsuleShapeSettings;
}
extern "C" {
    pub fn JPH_TaperedCapsuleShapeSettings_CreateShape(
        settings: *mut JPH_TaperedCapsuleShapeSettings,
    ) -> *mut JPH_TaperedCapsuleShape;
}
extern "C" {
    pub fn JPH_TaperedCapsuleShape_GetTopRadius(shape: *const JPH_TaperedCapsuleShape) -> f32;
}
extern "C" {
    pub fn JPH_TaperedCapsuleShape_GetBottomRadius(shape: *const JPH_TaperedCapsuleShape) -> f32;
}
extern "C" {
    pub fn JPH_TaperedCapsuleShape_GetHalfHeight(shape: *const JPH_TaperedCapsuleShape) -> f32;
}
extern "C" {
    pub fn JPH_CompoundShapeSettings_AddShape(
        settings: *mut JPH_CompoundShapeSettings,
        position: *const JPH_Vec3,
        rotation: *const JPH_Quat,
        shape: *const JPH_ShapeSettings,
        userData: u32,
    );
}
extern "C" {
    pub fn JPH_CompoundShapeSettings_AddShape2(
        settings: *mut JPH_CompoundShapeSettings,
        position: *const JPH_Vec3,
        rotation: *const JPH_Quat,
        shape: *const JPH_Shape,
        userData: u32,
    );
}
extern "C" {
    pub fn JPH_CompoundShape_GetNumSubShapes(shape: *const JPH_CompoundShape) -> u32;
}
extern "C" {
    pub fn JPH_CompoundShape_GetSubShape(
        shape: *const JPH_CompoundShape,
        index: u32,
        subShape: *mut *const JPH_Shape,
        positionCOM: *mut JPH_Vec3,
        rotation: *mut JPH_Quat,
        userData: *mut u32,
    );
}
extern "C" {
    pub fn JPH_CompoundShape_GetSubShapeIndexFromID(
        shape: *const JPH_CompoundShape,
        id: JPH_SubShapeID,
        remainder: *mut JPH_SubShapeID,
    ) -> u32;
}
extern "C" {
    pub fn JPH_StaticCompoundShapeSettings_Create() -> *mut JPH_StaticCompoundShapeSettings;
}
extern "C" {
    pub fn JPH_StaticCompoundShape_Create(
        settings: *const JPH_StaticCompoundShapeSettings,
    ) -> *mut JPH_StaticCompoundShape;
}
extern "C" {
    pub fn JPH_MutableCompoundShapeSettings_Create() -> *mut JPH_MutableCompoundShapeSettings;
}
extern "C" {
    pub fn JPH_MutableCompoundShape_Create(
        settings: *const JPH_MutableCompoundShapeSettings,
    ) -> *mut JPH_MutableCompoundShape;
}
extern "C" {
    pub fn JPH_MutableCompoundShape_AddShape(
        shape: *mut JPH_MutableCompoundShape,
        position: *const JPH_Vec3,
        rotation: *const JPH_Quat,
        child: *const JPH_Shape,
        userData: u32,
    ) -> u32;
}
extern "C" {
    pub fn JPH_MutableCompoundShape_RemoveShape(shape: *mut JPH_MutableCompoundShape, index: u32);
}
extern "C" {
    pub fn JPH_MutableCompoundShape_ModifyShape(
        shape: *mut JPH_MutableCompoundShape,
        index: u32,
        position: *const JPH_Vec3,
        rotation: *const JPH_Quat,
    );
}
extern "C" {
    pub fn JPH_MutableCompoundShape_ModifyShape2(
        shape: *mut JPH_MutableCompoundShape,
        index: u32,
        position: *const JPH_Vec3,
        rotation: *const JPH_Quat,
        newShape: *const JPH_Shape,
    );
}
extern "C" {
    pub fn JPH_MutableCompoundShape_AdjustCenterOfMass(shape: *mut JPH_MutableCompoundShape);
}
extern "C" {
    pub fn JPH_DecoratedShape_GetInnerShape(shape: *const JPH_DecoratedShape) -> *const JPH_Shape;
}
extern "C" {
    pub fn JPH_RotatedTranslatedShapeSettings_Create(
        position: *const JPH_Vec3,
        rotation: *const JPH_Quat,
        shapeSettings: *const JPH_ShapeSettings,
    ) -> *mut JPH_RotatedTranslatedShapeSettings;
}
extern "C" {
    pub fn JPH_RotatedTranslatedShapeSettings_Create2(
        position: *const JPH_Vec3,
        rotation: *const JPH_Quat,
        shape: *const JPH_Shape,
    ) -> *mut JPH_RotatedTranslatedShapeSettings;
}
extern "C" {
    pub fn JPH_RotatedTranslatedShapeSettings_CreateShape(
        settings: *const JPH_RotatedTranslatedShapeSettings,
    ) -> *mut JPH_RotatedTranslatedShape;
}
extern "C" {
    pub fn JPH_RotatedTranslatedShape_Create(
        position: *const JPH_Vec3,
        rotation: *const JPH_Quat,
        shape: *const JPH_Shape,
    ) -> *mut JPH_RotatedTranslatedShape;
}
extern "C" {
    pub fn JPH_RotatedTranslatedShape_GetPosition(
        shape: *const JPH_RotatedTranslatedShape,
        position: *mut JPH_Vec3,
    );
}
extern "C" {
    pub fn JPH_RotatedTranslatedShape_GetRotation(
        shape: *const JPH_RotatedTranslatedShape,
        rotation: *mut JPH_Quat,
    );
}
extern "C" {
    pub fn JPH_ScaledShapeSettings_Create(
        shapeSettings: *const JPH_ShapeSettings,
        scale: *const JPH_Vec3,
    ) -> *mut JPH_ScaledShapeSettings;
}
extern "C" {
    pub fn JPH_ScaledShapeSettings_Create2(
        shape: *const JPH_Shape,
        scale: *const JPH_Vec3,
    ) -> *mut JPH_ScaledShapeSettings;
}
extern "C" {
    pub fn JPH_ScaledShapeSettings_CreateShape(
        settings: *const JPH_ScaledShapeSettings,
    ) -> *mut JPH_ScaledShape;
}
extern "C" {
    pub fn JPH_ScaledShape_Create(
        shape: *const JPH_Shape,
        scale: *const JPH_Vec3,
    ) -> *mut JPH_ScaledShape;
}
extern "C" {
    pub fn JPH_ScaledShape_GetScale(shape: *const JPH_ScaledShape, result: *mut JPH_Vec3);
}
extern "C" {
    pub fn JPH_OffsetCenterOfMassShapeSettings_Create(
        offset: *const JPH_Vec3,
        shapeSettings: *const JPH_ShapeSettings,
    ) -> *mut JPH_OffsetCenterOfMassShapeSettings;
}
extern "C" {
    pub fn JPH_OffsetCenterOfMassShapeSettings_Create2(
        offset: *const JPH_Vec3,
        shape: *const JPH_Shape,
    ) -> *mut JPH_OffsetCenterOfMassShapeSettings;
}
extern "C" {
    pub fn JPH_OffsetCenterOfMassShapeSettings_CreateShape(
        settings: *const JPH_OffsetCenterOfMassShapeSettings,
    ) -> *mut JPH_OffsetCenterOfMassShape;
}
extern "C" {
    pub fn JPH_OffsetCenterOfMassShape_Create(
        offset: *const JPH_Vec3,
        shape: *const JPH_Shape,
    ) -> *mut JPH_OffsetCenterOfMassShape;
}
extern "C" {
    pub fn JPH_OffsetCenterOfMassShape_GetOffset(
        shape: *const JPH_OffsetCenterOfMassShape,
        result: *mut JPH_Vec3,
    );
}
extern "C" {
    pub fn JPH_EmptyShapeSettings_Create(
        centerOfMass: *const JPH_Vec3,
    ) -> *mut JPH_EmptyShapeSettings;
}
extern "C" {
    pub fn JPH_EmptyShapeSettings_CreateShape(
        settings: *const JPH_EmptyShapeSettings,
    ) -> *mut JPH_EmptyShape;
}
extern "C" {
    pub fn JPH_BodyCreationSettings_Create() -> *mut JPH_BodyCreationSettings;
}
extern "C" {
    pub fn JPH_BodyCreationSettings_Create2(
        settings: *mut JPH_ShapeSettings,
        position: *const JPH_RVec3,
        rotation: *const JPH_Quat,
        motionType: JPH_MotionType,
        objectLayer: JPH_ObjectLayer,
    ) -> *mut JPH_BodyCreationSettings;
}
extern "C" {
    pub fn JPH_BodyCreationSettings_Create3(
        shape: *const JPH_Shape,
        position: *const JPH_RVec3,
        rotation: *const JPH_Quat,
        motionType: JPH_MotionType,
        objectLayer: JPH_ObjectLayer,
    ) -> *mut JPH_BodyCreationSettings;
}
extern "C" {
    pub fn JPH_BodyCreationSettings_Destroy(settings: *mut JPH_BodyCreationSettings);
}
extern "C" {
    pub fn JPH_BodyCreationSettings_GetPosition(
        settings: *mut JPH_BodyCreationSettings,
        result: *mut JPH_RVec3,
    );
}
extern "C" {
    pub fn JPH_BodyCreationSettings_SetPosition(
        settings: *mut JPH_BodyCreationSettings,
        value: *const JPH_RVec3,
    );
}
extern "C" {
    pub fn JPH_BodyCreationSettings_GetRotation(
        settings: *mut JPH_BodyCreationSettings,
        result: *mut JPH_Quat,
    );
}
extern "C" {
    pub fn JPH_BodyCreationSettings_SetRotation(
        settings: *mut JPH_BodyCreationSettings,
        value: *const JPH_Quat,
    );
}
extern "C" {
    pub fn JPH_BodyCreationSettings_GetLinearVelocity(
        settings: *mut JPH_BodyCreationSettings,
        velocity: *mut JPH_Vec3,
    );
}
extern "C" {
    pub fn JPH_BodyCreationSettings_SetLinearVelocity(
        settings: *mut JPH_BodyCreationSettings,
        velocity: *const JPH_Vec3,
    );
}
extern "C" {
    pub fn JPH_BodyCreationSettings_GetAngularVelocity(
        settings: *mut JPH_BodyCreationSettings,
        velocity: *mut JPH_Vec3,
    );
}
extern "C" {
    pub fn JPH_BodyCreationSettings_SetAngularVelocity(
        settings: *mut JPH_BodyCreationSettings,
        velocity: *const JPH_Vec3,
    );
}
extern "C" {
    pub fn JPH_BodyCreationSettings_GetMotionType(
        settings: *mut JPH_BodyCreationSettings,
    ) -> JPH_MotionType;
}
extern "C" {
    pub fn JPH_BodyCreationSettings_SetMotionType(
        settings: *mut JPH_BodyCreationSettings,
        value: JPH_MotionType,
    );
}
extern "C" {
    pub fn JPH_BodyCreationSettings_GetAllowedDOFs(
        settings: *mut JPH_BodyCreationSettings,
    ) -> JPH_AllowedDOFs;
}
extern "C" {
    pub fn JPH_BodyCreationSettings_SetAllowedDOFs(
        settings: *mut JPH_BodyCreationSettings,
        value: JPH_AllowedDOFs,
    );
}
extern "C" {
    pub fn JPH_SoftBodyCreationSettings_Create() -> *mut JPH_SoftBodyCreationSettings;
}
extern "C" {
    pub fn JPH_SoftBodyCreationSettings_Destroy(settings: *mut JPH_SoftBodyCreationSettings);
}
extern "C" {
    pub fn JPH_ConstraintSettings_Destroy(settings: *mut JPH_ConstraintSettings);
}
